# happy-birthday-service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_07_12_0327-eced8c9ab392_added_users.py  2024_07_15_0135-8f7b9f98d6c2_added_subs.py  2024_07_15_0136-de80de88734f_added_subs2.py  2024_07_15_0143-e065fedf5af3_added_subs3.py  2024_07_15_0205-f6f1453d69d7_changed_subs.py  2024_07_15_0348-0a80b60b0852_added_unique_subs.py  2024_07_15_0349-4e1736067c6b_added_unique_subs.py
src/: logs_config.json  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  auth.py  subscriptions.py  users.py
src/app/: app_config.py
src/app/dependencies/: api.py  auth.py  repositories.py  services.py  session.py
src/domain/: notifications.py
src/domain/email_utils/: email_config.py  email_helper.py
src/domain/schemas/: notification_schema.py  subscription_schema.py  token_schema.py  user_schema.py
src/domain/services/: auth_service.py  subscription_service.py  user_service.py
src/domain/token_utils/: token_config.py  token_helper.py
src/infra/db/: db_helper.py
src/infra/models/: base_model.py  subscription_model.py  user_model.py
src/infra/repositories/: base_repository.py  sqlalchemy_repository.py  subscription_repository.py  user_repository.py
